force-app/main/default/objects/ApiLogEvent__e/ApiLogEvent__e.object-meta.xml
<CustomObject>
    <label>ApiLogEvent</label>
    <pluralLabel>ApiLogEvents</pluralLabel>
</CustomObject>