force-app/main/default/objects/ApiLogEvent__e/fields/ApexMethod__c.field-meta.xml
<CustomField>
    <fullName>ApexMethod__c</fullName>
    <label>ApexMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>