force-app/main/default/objects/ApiLogEvent__e/fields/CurrentUser__c.field-meta.xml
<CustomField>
    <fullName>CurrentUser__c</fullName>
    <label>CurrentUser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>