force-app/main/default/objects/ApiLogEvent__e/fields/Verb__c.field-meta.xml
<CustomField>
    <fullName>Verb__c</fullName>
    <label>Verb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>